--- a/src/14.物理动画/index.html
+++ b/src/14.物理动画/index.html
@@ -29,44 +29,44 @@
       const ctx = canvas.getContext("2d");
 
       // 追随鼠标旋转
-      // class Arrow {
-      //   constructor(x = 0, y = 0, angle = 0) {
-      //     this.x = x;
-      //     this.y = y;
-      //     this.angle = angle;
-      //   }
-      //   fill(ctx) {
-      //     ctx.save();
-      //     ctx.translate(this.x, this.y);
-      //     ctx.rotate(this.angle);
-      //     ctx.fillStyle = "#F00";
-      //     ctx.beginPath();
-      //     ctx.moveTo(-20, -10);
-      //     ctx.lineTo(0, -10);
-      //     ctx.lineTo(0, -20);
-      //     ctx.lineTo(20, 0);
-      //     ctx.lineTo(0, 20);
-      //     ctx.lineTo(0, 10);
-      //     ctx.lineTo(-20, 10);
-      //     ctx.closePath();
-      //     ctx.fill();
-      //     ctx.restore();
-      //   }
-      // }
+      class Arrow {
+        constructor(x = 0, y = 0, angle = 0) {
+          this.x = x;
+          this.y = y;
+          this.angle = angle;
+        }
+        fill(ctx) {
+          ctx.save();
+          ctx.translate(this.x, this.y);
+          ctx.rotate(this.angle);
+          ctx.fillStyle = "#F00";
+          ctx.beginPath();
+          ctx.moveTo(-20, -10);
+          ctx.lineTo(0, -10);
+          ctx.lineTo(0, -20);
+          ctx.lineTo(20, 0);
+          ctx.lineTo(0, 20);
+          ctx.lineTo(0, 10);
+          ctx.lineTo(-20, 10);
+          ctx.closePath();
+          ctx.fill();
+          ctx.restore();
+        }
+      }
 
       // const arrow = new Arrow(300, 300);
-      // const getMouse = (element) => {
-      //   const mouse = { x: 0, y: 0 };
-      //   element.addEventListener("mousemove", function (e) {
-      //     e = e || window.event;
-      //     let { pageX: x, pageY: y } = e;
-      //     x -= element.offsetLeft;
-      //     y -= element.offsetTop;
-      //     mouse.x = x;
-      //     mouse.y = y;
-      //   });
-      //   return mouse;
-      // };
+      const getMouse = (element) => {
+        const mouse = { x: 0, y: 0 };
+        element.addEventListener("mousemove", function (e) {
+          e = e || window.event;
+          let { pageX: x, pageY: y } = e;
+          x -= element.offsetLeft;
+          y -= element.offsetTop;
+          mouse.x = x;
+          mouse.y = y;
+        });
+        return mouse;
+      };
       // const mouse = getMouse(canvas);
       // const frame = () => {
       //   window.requestAnimationFrame(frame);
@@ -93,13 +93,14 @@
 
       // 球
       class Ball {
-        constructor(x, y) {
+        constructor(x, y, color = "red") {
           this.x = x;
           this.y = y;
+          this.color = color;
         }
         fill() {
           ctx.save();
-          ctx.fillStyle = "red";
+          ctx.fillStyle = this.color;
           ctx.beginPath();
           ctx.arc(this.x, this.y, 10, 0, Math.PI * 2);
           ctx.closePath();
@@ -259,18 +260,93 @@
         }
       }
 
-      let angle = 0;
-      const range = 1;
-      const ball = new ScaleBall(300, 300);
-      const frame = () => {
-        window.requestAnimationFrame(frame);
-        ctx.clearRect(0, 0, 600, 600);
-        ball.scaleX = 1 + Math.sin(angle) * range;
-        ball.scaleY = 1 + Math.sin(angle) * range;
-        ball.fill();
-        angle += 0.1;
+      // let angle = 0;
+      // const range = 1;
+      // const ball = new ScaleBall(300, 300);
+      // const frame = () => {
+      //   window.requestAnimationFrame(frame);
+      //   ctx.clearRect(0, 0, 600, 600);
+      //   ball.scaleX = 1 + Math.sin(angle) * range;
+      //   ball.scaleY = 1 + Math.sin(angle) * range;
+      //   ball.fill();
+      //   angle += 0.1;
+      // };
+      // frame();
+
+      // 匀速运动
+
+      // const ball1 = new Ball(0, 300);
+      // const ball2 = new Ball(300, 0, "yellow");
+      // const vy = 3;
+      // const vx = 3;
+      // const frame = () => {
+      //   window.requestAnimationFrame(frame);
+      //   ctx.clearRect(0, 0, 600, 600);
+      //   // x
+      //   ball1.x += vx;
+      //   if (ball1.x > 600) ball1.x = 0;
+      //   // y
+      //   ball2.y += vy;
+      //   if (ball2.y > 600) ball2.y = 0;
+      //   ball1.fill();
+      //   ball2.fill();
+      // };
+      // frame();
+
+      // 任意方向匀速运动
+      // const ball1 = new Ball(0, 0);
+      // const ball2 = new Ball(0, 0, "yellow");
+      // const ball3 = new Ball(0, 0, "green");
+      // const speed = 3;
+      const getV = (angle, speed) => {
+        return {
+          vx: speed * Math.cos((angle * Math.PI) / 180),
+          vy: speed * Math.sin((angle * Math.PI) / 180),
+        };
       };
-      frame();
+      // const ball1V = getV(30,speed);
+      // const ball2V = getV(45,speed);
+      // const ball3V = getV(60,speed);
+
+      // const frame = () => {
+      //   window.requestAnimationFrame(frame);
+      //   ctx.clearRect(0, 0, 600, 600);
+      //   // 30
+      //   ball1.x += ball1V.vx;
+      //   ball1.y += ball1V.vy;
+      //   // 45
+      //   ball2.x += ball2V.vx;
+      //   ball2.y += ball2V.vy;
+      //   // 60
+      //   ball3.x += ball3V.vx;
+      //   ball3.y += ball3V.vy;
+
+      //   ball1.fill();
+      //   ball2.fill();
+      //   ball3.fill();
+      // };
+      // frame();
+
+      // 箭头跟随鼠标移动
+
+      // const arrow = new Arrow(300, 300);
+      // const mouse = getMouse(canvas);
+      // let angle = 0;
+      // const speed = 1.5;
+      // const frame = () => {
+      //   window.requestAnimationFrame(frame);
+      //   ctx.clearRect(0, 0, 600, 600);
+      //   const dx = mouse.x - canvas.width / 2;
+      //   const dy = mouse.y - canvas.height / 2;
+      //   angle = Math.atan2(dy, dx);
+      //   const vx = Math.cos(angle) * speed;
+      //   const vy = Math.sin(angle) * speed;
+      //   arrow.x += vx;
+      //   arrow.y += vy;
+      //   arrow.angle = angle;
+      //   arrow.fill(ctx);
+      // };
+      // frame();
     </script>
   </body>
 </html>
