--- a/src/15.边界检测/index.html
+++ b/src/15.边界检测/index.html
@@ -165,9 +165,9 @@
       //   ctx.clearRect(0, 0, 600, 600);
       //   balls.forEach((ball) => {
       //     if (
-      //       (ball.x < -ball.radius) |
-      //       (ball.x > canvas.width + ball.radius) |
-      //       (ball.y < -ball.radius) |
+      //       (ball.x < -ball.radius) ||
+      //       (ball.x > canvas.width + ball.radius) ||
+      //       (ball.y < -ball.radius) ||
       //       (ball.y > canvas.height + ball.radius)
       //     ) {
       //       ball.x = 300;
