--- a/src/15.边界检测/index.html
+++ b/src/15.边界检测/index.html
@@ -111,7 +111,7 @@
       //   if (ball.x < ball.radius) {
       //     // 左侧边界
       //     ball.x = ball.radius;
-      //   } elyse if (ball.x > canvas.width - ball.radius) {
+      //   } else if (ball.x > canvas.width - ball.radius) {
       //     // 右侧边界
       //     ball.x = canvas.width - ball.radius;
       //   }
